k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zerobroker-ingress
  namespace: zero-broker
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  ingressClassName: traefik

  rules:
    - host: zerobroker.local
      http:
        paths:

          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: backend-auth
                port:
                  number: 5000

          - path: /api/home
            pathType: Prefix
            backend:
              service:
                name: backend-home
                port:
                  number: 4001

          - path: /api/rent
            pathType: Prefix
            backend:
              service:
                name: backend-rent
                port:
                  number: 4002

          - path: /api/buy
            pathType: Prefix
            backend:
              service:
                name: backend-buy
                port:
                  number: 4003

          - path: /api/search
            pathType: Prefix
            backend:
              service:
                name: backend-search
                port:
                  number: 4004

          - path: /
            pathType: Prefix
            backend:
              service:
                name: zerobroker-frontend-service
                port:
                  number: 80
